--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,15 @@ uuid = "e12464de-de28-4143-b5d1-34185b1dff4c"
 authors = ["Jutho Haegeman <jutho.haegeman@ugent.be> and contributors"]
 version = "0.1.0"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
+OptimKit = "d381577b-3942-517b-91db-f758eb6f72c2"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
+
 [compat]
-julia = "1"
+julia = "1.4"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
