--- a/Project.toml
+++ b/Project.toml
@@ -12,8 +12,8 @@ UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
 
 [compat]
 julia = "1.4"
-KrylovKit = "0.5.2"
-OptimKit = "0.1"
+KrylovKit = "0.5"
+OptimKit = "0.1 - 1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
