--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
 
 [compat]
 julia = "1.4"
-KrylovKit = "0.5"
+KrylovKit = "0.5 - 1"
 OptimKit = "0.1 - 1"
 
 [extras]
