--- a/paper/Project.toml
+++ b/paper/Project.toml
@@ -1,6 +1,7 @@
 [deps]
-CMPSKit = "e12464de-de28-4143-b5d1-34185b1dff4c"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 OptimKit = "77e91f04-9b3b-57a6-a776-40b61faaebe0"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
