--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
 OptimKit = "77e91f04-9b3b-57a6-a776-40b61faaebe0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
 julia = "1.4"
